# cuda4cpu

./: CMakeLists.txt  README.md  configure
include/: CMakeLists.txt  cuda4cpu.hpp  defines.hpp  launch.hpp  types.hpp
include/cuda/: device.hpp  events.hpp  memory.hpp  mycuda.hpp  streams.hpp  types.hpp
lib/: CMakeLists.txt  cuda4cpu.cpp
tests/: CMakeLists.txt  stencil2d.cpp  stencil3d.cpp
