aux_source_directory(. LIB_SRC)
aux_source_directory(${CMAKE_SOURCE_DIR}/include LIB_INCLUDE)

include_directories(${CMAKE_SOURCE_DIR}/include)

set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -fopenmp")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fopenmp")

add_library(${CMAKE_IMPORT_LIBRARY_PREFIX}cuda4cpu SHARED ${LIB_SRC} ${LIB_INCLUDE})

set(CUDA4CPU_LIB ${CMAKE_IMPORT_LIBRARY_PREFIX}cuda4cpu${CMAKE_IMPORT_LIBRARY_SUFFIX} CACHE INTERNAL "")

target_link_libraries(${CMAKE_IMPORT_LIBRARY_PREFIX}cuda4cpu${CMAKE_IMPORT_LIBRARY_SUFFIX} ${CUDA_LIBRARIES})

install(TARGETS ${CMAKE_IMPORT_LIBRARY_PREFIX}cuda4cpu${CMAKE_IMPORT_LIBRARY_SUFFIX}
        LIBRARY DESTINATION lib
        COMPONENT libraries)
